objects/HR_Job_Requisition__c.object
<CustomObject>
    <description>Used to manage job requisitions.  Included in the App Cloud Harbor Cruise package.</description>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>HR_Close_Date__c</fullName>
        <label>Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HR_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The HR contact for this job requisition.</description>
        <inlineHelpText>The HR contact for this job requisition.</inlineHelpText>
        <label>HR Contact</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Positions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HR_Days_Open__c</fullName>
        <formula>IF( ISNULL( HR_Close_Date__c ) ,
TODAY() - HR_Rec_Open__c ,
HR_Close_Date__c - HR_Rec_Open__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Open</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HR_Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>HR_Functional_Area__c</fullName>
        <label>Functional Area</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>Human Resources</fullName>
                </value>
                <value>
                    <fullName>Information Technology</fullName>
                </value>
                <value>
                    <fullName>Retail Operations</fullName>
                </value>
                <value>
                    <fullName>Warehousing</fullName>
                </value>
                <value>
                    <fullName>Hardware Engineering</fullName>
                </value>
                <value>
                    <fullName>Software Engineering</fullName>
                </value>
                <value>
                    <fullName>Product Management</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Sales Department</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HR_Hire_by_Date__c</fullName>
        <defaultValue>Today()+60</defaultValue>
        <label>Hire by Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HR_Hiring_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The hiring manager for this job requisition.</description>
        <inlineHelpText>The hiring manager for this job requisition.</inlineHelpText>
        <label>Hiring Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>HR_Job_Requisitions_Hiring_Manager</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HR_Location__c</fullName>
        <label>Location</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HR_Master_Job_Definition__c</fullName>
        <label>Master Job Definition</label>
        <length>30</length>
        <referenceTo>Jobs__x</referenceTo>
        <relationshipLabel>Job Requisitions</relationshipLabel>
        <relationshipName>Job_Requisitions</relationshipName>
        <type>ExternalLookup</type>
    </fields>
    <fields>
        <fullName>HR_Max_Pay__c</fullName>
        <label>Max Pay</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HR_Min_Pay__c</fullName>
        <label>Min Pay</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HR_Rec_Open__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Rec Open Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HR_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Needs Approval</fullName>
                </value>
                <value>
                    <fullName>Open - Approved</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HR_Travel_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Travel Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HR_Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Full Time</fullName>
                </value>
                <value>
                    <fullName>Part Time</fullName>
                </value>
                <value>
                    <fullName>Internship</fullName>
                </value>
                <value>
                    <fullName>Contractor</fullName>
                </value>
                <value>
                    <fullName>Remote</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Position_ID__c</fullName>
        <externalId>true</externalId>
        <label>Position ID</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Job Requisition</label>
    <listViews>
        <fullName>HR_Open_jobs</fullName>
        <columns>NAME</columns>
        <columns>HR_Type__c</columns>
        <columns>HR_Location__c</columns>
        <columns>HR_Rec_Open__c</columns>
        <columns>HR_Hire_by_Date__c</columns>
        <columns>HR_Days_Open__c</columns>
        <columns>HR_Max_Pay__c</columns>
        <columns>HR_Min_Pay__c</columns>
        <columns>HR_Status__c</columns>
        <columns>HR_Travel_Required__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Open Job Requisitions</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Job Requisitions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>